# uBridge-plugins

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/common/: uBridgeConfig.h  ubridgeClient.h
cpp/csv-log/: CMakeLists.txt  README.md  csv-plugin-config.json  ubridge-csv-plugin.service
cpp/csv-log/src/: csvLogger.cpp  csvLogger.h  main.cpp
cpp/http-thingsboard/: CMakeLists.txt  thingsboard-plugin-config.json  ubridge-thingsboard-plugin.service
cpp/http-thingsboard/src/: main.cpp  thingsboard.h
cpp/include/: uBridgeConfig.h
cpp/influxdb/: CMakeLists.txt  README.md  influx-plugin-config.json  ubridge-influx-plugin.service
cpp/influxdb/src/: influx.cpp  influx.h  main.cpp
cpp/mqtt/: CMakeLists.txt  README.md  mqtt-plugin-config.json  ubridge-mqtt-plugin.service
cpp/mqtt/src/: main.cpp  mqttClient.cpp  mqttClient.h
examples/ubridge-cpp-client/: CMakeLists.txt  main.cpp
examples/ubridge-python-client/: README.md  requirements.txt  ubridge_client.py
